--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,12 @@
       "purpose": "any"
     },
     {
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
       "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
