--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,9 @@ services:
       ETHERSCAN_API_KEY: ${ETHERSCAN_API_KEY:-}
       MORALIS_API_KEY: ${MORALIS_API_KEY:-}
       HELIUS_API_KEY: ${HELIUS_API_KEY:-}
+      JUPITER_API_KEY: ${JUPITER_API_KEY:-}
+      NEXT_PUBLIC_HELIUS_API_KEY: ${HELIUS_API_KEY:-}
+      NEXT_PUBLIC_SOLANA_RPC_URL: ${SOLANA_RPC_URL:-}
     ports:
       - "3003:3003"
     depends_on:
